--- a/README
+++ b/README
@@ -1,1 +1,4 @@
-Hier entsteht eine Sammlung für die Firefox-Erweiterung userChrome.js
+Hier entsteht eine Sammlung für die Firefox-Erweiterung userChrome.js. 
+
+Fast alle Skripte wurden im deutschen Firefox-Forum vorgestellt bzw. dort angepasst.
+
