--- a/README
+++ b/README
@@ -1,4 +1,6 @@
-Hier entsteht eine Sammlung für die Firefox-Erweiterung userChrome.js. 
+Hier entsteht eine Sammlung fuer die Firefox-Erweiterung userChrome.js. 
 
 Fast alle Skripte wurden im deutschen Firefox-Forum vorgestellt bzw. dort angepasst.
 
+
+Quelle https://github.com/ardiman/userChrome.js
