--- a/README
+++ b/README
@@ -2,5 +2,8 @@ Hier entsteht eine Sammlung fuer die Firefox-Erweiterung userChrome.js.
 
 Fast alle Skripte wurden im deutschen Firefox-Forum vorgestellt bzw. dort angepasst.
 
+Für GitHub werden die Skripte in Unterordnern mit entsprechenden README-Dateien abgelegt. Zur Installation der Skripte im Firefox muss bei vorhandener Erweiterung userChrome.js das jeweilige Skript in den Chrome-Ordner verschoben werden.
 
-Quelle https://github.com/ardiman/userChrome.js
+Quellen:
+http://www.camp-firefox.de/forum/viewtopic.php?f=16&t=90403
+https://github.com/ardiman/userChrome.js
