Ergaenzung zu userChrome.js selbst

--- a/README
+++ b/README
@@ -2,7 +2,19 @@ Hier entsteht eine Sammlung fuer die Firefox-Erweiterung userChrome.js.
 
 Fast alle Skripte wurden im deutschen Firefox-Forum vorgestellt bzw. dort angepasst.
 
-Für GitHub werden die Skripte in Unterordnern mit entsprechenden README-Dateien abgelegt. Zur Installation der Skripte im Firefox muss bei vorhandener Erweiterung userChrome.js das jeweilige Skript in den Chrome-Ordner verschoben werden.
+Fuer GitHub werden die Skripte in Unterordnern mit entsprechenden README-Dateien abgelegt. 
+
+Zur Installation der Skripte im Firefox muss bei vorhandener Erweiterung userChrome.js das jeweilige Skript in den Chrome-Ordner des Profils verschoben werden.
+Das Einbinden der uc.js-Dateien und anderer Dateien geschieht mit der beigelegten userChrome.js bwz. der Zeile
+
+userChrome.import("*", "UChrm");
+
+darin.
+
+
+Download userChrome.js:
+http://userchromejs.mozdev.org/
+
 
 Quellen:
 http://www.camp-firefox.de/forum/viewtopic.php?f=16&t=90403
