--- a/sanitize/README
+++ b/sanitize/README
@@ -1,1 +1,1 @@
-Deaktiviert beim Loeschen von Cache etc. mittels Hotkey (unter Windows: Strg+Umschalt+Enft) einige Optionen wie z.B. Cookies.
+Deaktiviert beim Loeschen von Cache etc. mittels Hotkey (unter Windows: Strg+Umschalt+Entf) einige Optionen wie z.B. Cookies.
