Haupt-README  entfernt und ins markdown-Format umgewandelt. Weitere Skripte hinzugefuegt etc.

--- a/ieview/README
+++ b/ieview/README
@@ -1,1 +1,1 @@
-Oeffnet ueber das Kontextmenu die aktuelle Seite im Internet Explorer.
+Oeffnet ueber das Kontextmenu die aktuelle Seite/den Link im Internet Explorer.
